<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">免商店</string>
    <string name="tab_title1">首页</string>
    <string name="tab_title2">游戏</string>
    <string name="tab_title3">通信</string>
    <string name="tab_cool_play">酷玩</string>
    <string name="mine">我的</string>
    <string-array name="game_manage">
        <item>下载管理</item>
        <item>已安装</item>
        <item>可更新</item>
    </string-array>
    <string name="voucher_tutu_title">兔兔券</string>
    <string name="voucher_youxi_title">游戏代金券</string>
    <string name="voucher_kuwan_title">酷玩代金券</string>
    <string-array name="score_wall_titles">
        <item>做任务得积分</item>
        <item>积分兑换奖励</item>
    </string-array>
    <string-array name="detail_tab_titles">
        <item>介绍</item>
        <item>评论</item>
        <item>礼包</item>
        <item>论坛</item>
    </string-array>
    <string-array name="seekgame_bar_titles">
        <item>推荐</item>
        <item>礼包</item>
        <item>分类</item>
        <item>排行</item>
        <item>论坛</item>
    </string-array>
    <string-array name="seekapp_bar_titles">
        <item>推荐</item>
        <item>分类</item>
    </string-array>
    <string name="title_activity_down_load_manage">下载管理</string>
    <string name="search_hint">搜索</string>
    <string name="search_history_delete">清空</string>
    <string name="descr_image">图片</string>
    <string name="search_hot_title">热门搜索</string>
    <string name="search_history_title">搜索历史</string>
    <string name="chang_search_key">换一批</string>
    <string name="search_result_count">（%s个结果）</string>
    <string name="search_guess_header_title">抱歉！</string>
    <string name="search_guess_header_content">没有搜到相关结果，以下内容您可能喜欢</string>
    <string-array name="search_result_tabs">
        <item>全部</item>
        <item>游戏/软件</item>
        <item>动态</item>
        <item>酷玩</item>
    </string-array>
    <string name="menu_share_success">恭喜您分享成功！</string>
    <string name="share_success">分享成功</string>
    <string name="share_faith">您已经分享啦</string>
    <string name="share_shareing">正在分享...</string>
    <string name="share_cancle">分享已取消</string>
    <string name="share_fail">分享失败</string>
    <string name="share">分享</string>
    <string name="no_image_to_share">未找到可分享的图片</string>
    <string name="share_good_app">分享一个好应用给你：</string>
    <string name="share_free_tip">，通过免商店可以免流量下载。</string>
    <string name="loading_game_icon">正在加载应用图标</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="no_weixin">还没有安装微信哦</string>
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="errcode_unknown">分享失败</string>
    <string name="get_share_points">恭喜您成功分享</string>
    <string name="chooser_title">选择要分享的应用</string>
    <string name="decode_bmp_fail">解析图片失败，请稍后重试</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_delete">删除</string>
    <string name="btn_download">下载</string>
    <string name="btn_waiting">等待</string>
    <string name="btn_continue">继续</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_install">安装</string>
    <string name="btn_upgrade">更新</string>
    <string name="btn_up">升级</string>
    <string name="btn_open">打开</string>
    <string name="btn_fail">重载</string>
    <string name="btn_installing">安装中</string>
    <string name="btn_patching">验证中</string>
    <string name="btn_notready">敬请期待</string>
    <string name="btn_exit">退出</string>
    <string name="silence_download_finish">更新包已下载完成</string>
    <string name="silence_install">立即安装</string>
    <string name="tv_app_default_name">应用名称</string>
    <string name="tv_loading">正在载入……</string>
    <string name="feedback_commit">提交</string>
    <string name="network_error">无网络链接</string>
    <string name="load_failture">加载失败！</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="manage_is_delete">是否删除选中的任务？</string>
    <string name="double_click_exit">再按一次返回键将退出免商店</string>
    <string name="list_item_download">下载</string>
    <string name="list_item_continue">继续</string>
    <string name="list_item_open">打开</string>
    <string name="list_item_uninstall">卸载</string>
    <string name="list_item_update">更新</string>
    <string name="list_item_ignore">忽略更新</string>
    <string name="list_item_ignore_cancel">取消忽略</string>
    <string name="delete_loading">正在删除中…</string>
    <string name="user_guide_download_tasks_delete">提示：长按列表可以删除下载任务</string>
    <string name="search_text_length_too_long">关键字最长为10个汉字</string>
    <string name="download_state_not_install">未安装</string>
    <string name="download_state_installing">安装中</string>
    <string name="download_state_patching">安装包验证中</string>
    <string name="download_state_installed">已安装</string>
    <string name="download_state_fail">下载失败</string>
    <string name="game_label">应用管理</string>
    <string name="ab_upgrade_ignore_title">已忽略更新</string>
    <string-array name="setting_array">
        <item>只在WIFI环境下下载</item>
        <item>使用流量下载时的弹窗提示</item>
        <item>下载完成后后台秒装(需root权限)</item>
        <item>自动安装应用 (无需root)</item>
        <item>安装完成后自动删除安装包</item>
        <item>开启消息推送</item>
        <item>应用更新提醒</item>
        <item>检测更新</item>
        <item>意见反馈</item>
        <item>关于</item>
    </string-array>
    <string name="setting_auto_install_deny">由于您的系统没有root，下载后无法自动安装</string>
    <string name="setting_auto_install_acc_service_name">免商店自动装</string>
    <string name="setting_auto_install_acc_des">[免商店自动装] 可以在免商店安装和升级应用时，无需一直盯着手机，免商店会帮您点击所需按钮,确保应用顺利安装。\n\n打开服务时，系统会弹出例行的警告。免商店承诺不会通过本功能收集你的隐私信息。\n\n[免商店自动装] 无需获取Root权限，支持 4.1以上。
    </string>
    <string name="update_detecting">正在检测...</string>
    <string name="no_update">当前已是最新版本</string>
    <string name="update_failed">更新失败，请您在网络畅通时再试一次</string>
    <string name="feed_back">问题反馈</string>
    <string name="feed_back_title_hint">请留下您的手机/QQ/邮箱</string>
    <string name="feed_back_content_null">反馈内容不能为空</string>
    <string name="feed_back_contend_hint">亲，您遇到什么系统问题，或有什么功能建议吗？欢迎您提给我们，谢谢！</string>
    <string name="about_action_bar_title">关于</string>
    <string name="feed_back_success">提交成功，感谢您的反馈，我们会尽快处理您的反馈意见</string>
    <string name="operate_fail">提交失败，请检测网络是否正常，然后重新尝试提交</string>
    <string name="feed_back_contact_tip">您的联系方式有助于沟通和解决问题，仅工作人员可见</string>
    <string name="menu_delete">删除</string>
    <string name="not_lt_is_continue">
       您当前处于非wifi网络环境下，继续下载将消耗数据流量。\n\n推荐使用免流量下载，畅下畅玩，随时随地！
    </string>
    <string name="click_here">
       &#160;&#160;&#160;&#160;点此立即查看>>
    </string>
    <string name="setting_deal">用户协议</string>
    <string name="page_content">内容详情</string>
    <string name="error_msg_download_invalid_url">%s无法下载</string>
    <string name="error_msg_download_unknown_error">%s下载时出现未知错误，请联系客服</string>
    <string name="error_msg_download_unknown_http_code">%s下载失败，链接错误</string>
    <string name="error_msg_download_device_not_found">%s下载失败，未找到存储卡</string>
    <string name="error_msg_download_file_exists">%s下载失败，下载文件已经存在</string>
    <string name="error_msg_download_insufficient_space">%s下载失败，存储空间不足</string>
    <string name="error_msg_download_wifi_only">您已设置只在wifi连接时才可以下载应用</string>
    <string name="error_msg_download_already_exists">%s已在下载列表</string>
    <string name="error_msg_download_md5_not_match">%s下载失败，下载文件不完整</string>
    <string name="error_msg_download_patching_file_error">由于网络原因，您下载%s的省流量更新失败，请尝试下载完整的更新包</string>
    <string name="error_msg_download_file_not_found">%s下载失败，下载文件已丢失</string>
    <string name="pause_msg_download_waiting_for_retry">%s已暂停下载，请稍后继续</string>
    <string name="error_msg_download_waiting_for_network">%s已暂停下载，等待可用网络</string>
    <string name="error_msg_download_queued_for_wifi">%s已暂停下载，等待可用WIFI</string>
    <string name="download_waitfor_wifi">等待WIFI环境下载</string>
    <string name="download_pause">已暂停</string>
    <string name="download_percent">%d%%</string>
    <string name="downloading_percent">下载中%.2f%%</string>
    <string name="notification_download_state_pending">等待下载</string>
    <string name="notification_download_state_running">任务下载中</string>
    <string name="notification_download_state_pausing">暂停下载</string>
    <string name="notification_download_state_fail">下载失败</string>
    <string name="notification_download_state_success">下载完成，点击安装</string>
    <string name="notification_download_state_installed">安装成功，点击进入</string>
    <string name="notification_download_ticker_pending">%s等待下载</string>
    <string name="notification_download_ticker_start">%s开始下载</string>
    <string name="notification_download_ticker_continue">%s继续下载</string>
    <string name="notification_download_ticker_pause">%s暂停下载</string>
    <string name="notification_download_ticker_fail">%s下载失败</string>
    <string name="notification_download_ticker_success">%s下载完成</string>
    <string name="notification_download_ticker_redownload">%s重新下载</string>
    <string name="notification_download_ticker_installing">%s自动安装中</string>
    <string name="notification_download_ticker_patching">%s正在验证中</string>
    <string name="notification_download_ticker_installed">%s安装成功</string>
    <string name="notification_download_unknow_app">未知应用</string>
    <string name="app_derail_json_parse_error">您访问的应用还没准备好哦</string>
    <string name="service_phone_lose">客服电话暂未开启</string>
    <string name="installing">正在安装中</string>
    <string name="patching">正在验证中</string>
    <string name="personal_composition">协约</string>
    <string name="not_login">未登录</string>
    <string name="login_and_get_more_info">登录后体验更多内容</string>
    <string name="personal_expire_tip">您的登录身份已过期，请您重新登录！</string>
    <string name="personal_info_failed">用户信息获取失败</string>
    <string name="personal_info_running">正在获取用户信息,请稍等...</string>
    <string name="personal_network_error">网络或服务器错误！</string>
    <string name="personal_saving_tip">数据保存中...</string>
    <string name="personal_user_none_download_prompt" formatted="false">今日还没有下载应用 别偷懒哦</string>
    <string name="personal_user_little_download_prompt" formatted="false">今日只下载了%d个应用 再多下些吧</string>
    <string name="personal_user_download_prompt" formatted="false">今日下载了%d个应用 超过了%s的免友</string>
    <string name="personal_user_task_prompt" formatted="false">%d个任务未完成</string>
    <string name="personal_user_scrate_prompt">天天都有福利拿</string>
    <string name="personal_user_member_prompt">超多会员福利</string>
    <string name="personal_code_exchange_prompt">兑换游戏礼包、代金券等</string>
    <string name="personal_user_address_prompt">查看收货地址</string>
    <string name="personal_user_spree_prompt" formatted="false">您已经领取了%d个礼包</string>
    <string name="personal_user_order_prompt">查看全部订单</string>
    <string name="personal_user_shpping_car">查看全部物品</string>
    <string name="free_flow_header">免流量声明</string>
    <string name="do_not_alert_any_more">记住我的选择，下次不再提示</string>
    <string name="see_detail">查看</string>
    <string name="get_verification">免费获取验证码</string>
    <string name="input_phone">请输入本机号码</string>
    <string name="input_verification">请输入六位验证码</string>
    <string name="bind_agreement">
        您必须在使用免流量号码电话卡的设备上使用免商店，才能正常享受免流量服务</string>
    <string name="unbind_tips">提示</string>
    <string name="order_success">预约成功</string>
    <string name="wait_your_order">请耐心等待应用上架</string>
    <string name="i_know">知道了</string>
    <string name="bind_phone">确定</string>
    <string name="setting_app_auto_install_dialog_title">开启 [免商店自动装]</string>
    <string name="setting_app_auto_install_dialog_content">开启功能需要你授权确认，本功能不会带来任何风险。</string>
    <string name="store_goods_recharge_header">代充</string>
    <string name="store_goods_recharge_footer">折起</string>
    <string name="store_point_select_1">0~100</string>
    <string name="store_point_selecter_2">100~500</string>
    <string name="store_point_selector_3">500~2000</string>
    <string name="store_point_selector_4">2000以上</string>
</resources>