<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/tips_dialog_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="积分区间选择"
        android:textColor="@color/red_light"
        android:textSize="14sp" />

    <include layout="@layout/common_horizontal_line" />


    <TextView
        android:id="@+id/tv_point_selector_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:drawableLeft="@drawable/ic_store_point_unselected"
        android:drawablePadding="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dimen_6dp"
        android:paddingTop="@dimen/dimen_6dp"
        android:text="@string/store_point_select_1"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/tv_point_selector_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:drawableLeft="@drawable/ic_store_point_unselected"
        android:drawablePadding="@dimen/dimen_12dp"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dimen_6dp"
        android:paddingTop="@dimen/dimen_6dp"
        android:text="@string/store_point_selecter_2"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/tv_point_selector_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:drawableLeft="@drawable/ic_store_point_unselected"
        android:drawablePadding="@dimen/dimen_12dp"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dimen_6dp"
        android:paddingTop="@dimen/dimen_6dp"
        android:text="@string/store_point_selector_3"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/tv_point_selector_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12dp"
        android:drawableLeft="@drawable/ic_store_point_unselected"
        android:drawablePadding="@dimen/dimen_12dp"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dimen_6dp"
        android:paddingTop="@dimen/dimen_6dp"
        android:text="@string/store_point_selector_4"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp" />


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:orientation="horizontal"
        android:paddingBottom="18dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_scan_cancle_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textColor="@color/black_light"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_scan_ok_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/btn_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</LinearLayout>