<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:hint="@string/input_phone"
        android:paddingLeft="@dimen/dimen_10dp"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        android:textColorHint="@color/have_updated_color"
        android:textCursorDrawable="@null">

    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/white">


        <EditText
            android:id="@+id/verification_code"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/input_verification"
            android:paddingLeft="@dimen/dimen_10dp"
            android:singleLine="true"
            android:textColor="@color/gray_text"
            android:textSize="14sp"
            android:textColorHint="@color/have_updated_color"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="12dp"
            android:background="@color/common_window_bg"
            android:clickable="false"
            android:gravity="center"
            android:textSize="12sp"
            android:padding="4dp"
            android:text="@string/get_verification"
            android:textColor="@color/have_updated_color" />

    </LinearLayout>

    <TextView
        android:id="@+id/phone_bind"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/btn_green_selector"
        android:gravity="center"
        android:text="@string/bind_phone"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_big" />

    <View
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bind_phone_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bind_agreement"
            android:textColor="@color/bind_phone_agreement_color" />
    </LinearLayout>


</LinearLayout>
