<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dialog="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tips_dialog_bg"
    android:orientation="vertical">


    <com.snailgame.cjg.common.widget.DialogTitleLayout
        android:id="@+id/tip_icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        dialog:hasIcon="true"
        dialog:isRed="true"
        dialog:titleText="@string/unbind_tips" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_flow_header"
        android:textColor="@color/result_view"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:lineSpacingMultiplier="1.2"
        android:gravity="left"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:id="@+id/checkbox_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/dialog_checkbox"
            style="@style/CustomBtnStyle"
            android:button="@drawable/decla_selector"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:paddingLeft="@dimen/app_common_dialog_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/do_not_alert_any_more"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <include layout="@layout/dialog_sure_dismiss" />


</LinearLayout>